[project]
name = "taiwanfrp-backend"
app_name = "TaiwanFRP"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.1",
    "httpx2>=2.5.0",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.50",
    "uuid6>=2025.0.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
[tool.mypy]
exclude = [
    "cover/"
]
[tool.pytest.ini_options]
pythonpath = [
    "."
]
[tool.pytest_env]
ENV_FILE = ".env.test"
